--- a/fundsServiceClient/src/index.html
+++ b/fundsServiceClient/src/index.html
@@ -1,14 +1,56 @@
-<!doctype html>
-<html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>FundsServiceClient</title>
-  <base href="/">
+<!DOCTYPE HTML>
+<!--
+	Halcyonic by HTML5 UP
+	html5up.net | @ajlkn
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
+<html>
+	<head>
+		<title>My Investment Details App</title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
+		<link rel="stylesheet" href="assets/themes/theme2/css/main.css" />
+		<!--[if lte IE 9]><link rel="stylesheet" href="assets/themes/theme2/css/ie9.css" /><![endif]-->
+	</head>
+	<body class="subpage">
+		<div id="page-wrapper">
 
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
- </head>
-<body>
-  <app-root>Loading...</app-root>
-  </body>
+			<!-- Header -->
+				<div id="header-wrapper">
+					<header id="header" class="container">
+						<div class="row">
+							<div class="12u">
+
+								<!-- Logo -->
+									<h1><a href="#" id="logo">My App</a></h1>
+
+								<!-- Nav -->
+									<nav id="nav">
+										<a href="index.html">Three Column</a>
+									</nav>
+
+							</div>
+						</div>
+					</header>
+				</div>
+
+			<app-root></app-root>
+
+			<!-- Copyright -->
+				<div id="copyright">
+					&copy; Untitled. All rights reserved.</a>
+				</div>
+
+		</div>
+
+		<!-- Scripts -->
+			<script src="assets/themes/theme2/js/jquery.min.js"></script>
+			<script src="assets/themes/theme2/js/skel.min.js"></script>
+			<script src="assets/themes/theme2/js/skel-viewport.min.js"></script>
+			<script src="assets/themes/theme2/js/util.js"></script>
+			<!--[if lte IE 8]><script src="assets/themes/theme2/js/ie/respond.min.js"></script><![endif]-->
+			<script src="assets/themes/theme2/js/main.js"></script>
+
+	</body>
 </html>
