--- a/fundsServiceClient/src/index.html
+++ b/fundsServiceClient/src/index.html
@@ -23,11 +23,11 @@
 							<div class="12u">
 
 								<!-- Logo -->
-									<h1><a href="#" id="logo">My App</a></h1>
+									<h1><a href="#" id="logo">MY APP</a></h1>
 
 								<!-- Nav -->
 									<nav id="nav">
-										<a href="index.html">Three Column</a>
+										<a href="index.html">KSHITIJ DEDHIA</a>
 									</nav>
 
 							</div>
